SAK-51839 Assignments legacy grader hide ability for Grade Overrides when anonymous group grading is selected (#14056)